# rediska

./: .clang-format  .editorconfig  CMakeLists.txt  README.md  default.nix  flake.nix  justfile  shell.nix
.github/scripts/: bootstrap.sh  log.sh
.github/workflows/: test.yml
include/: app.h
src/: client.c  main.c
